--- a/check-room/src/main/resources/application.properties
+++ b/check-room/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=check-room
 server.port=8080
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.datasource.url=jdbc:mysql://localhost:3306/checkroom
 spring.datasource.username=root
